<refactor>(all): fix Config.Text unchanged after language changed

--- a/Example/SSRefreshExample/SSRefreshExample/Base.lproj/Main.storyboard
+++ b/Example/SSRefreshExample/SSRefreshExample/Base.lproj/Main.storyboard
@@ -1,24 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zrm-cW-2he">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="SSRefreshExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
+                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDa-9a-Rg3">
+                                <rect key="frame" x="135" y="202" width="105" height="30"/>
+                                <state key="normal" title="TableController"/>
+                                <connections>
+                                    <action selector="pushTableController:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="LN6-QB-BOD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IhG-FI-Rm6">
+                                <rect key="frame" x="119" y="300" width="137" height="30"/>
+                                <state key="normal" title="TableViewController"/>
+                                <connections>
+                                    <action selector="pushTableViewController:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="aIZ-qj-tWu"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibp-2Q-wtD">
+                                <rect key="frame" x="46" y="511" width="283" height="56"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VSa-mt-McY">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="300" id="2cY-Xu-eDM"/>
+                                            <constraint firstAttribute="width" constant="300" id="eeV-TA-R4t"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="VSa-mt-McY" secondAttribute="bottom" id="57N-37-ecH"/>
+                                    <constraint firstItem="VSa-mt-McY" firstAttribute="top" secondItem="Ibp-2Q-wtD" secondAttribute="top" id="Gkc-ds-r8h"/>
+                                    <constraint firstAttribute="trailing" secondItem="VSa-mt-McY" secondAttribute="trailing" id="YgQ-9K-Xra"/>
+                                    <constraint firstItem="VSa-mt-McY" firstAttribute="leading" secondItem="Ibp-2Q-wtD" secondAttribute="leading" id="hwW-Tl-51K"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ibp-2Q-wtD" secondAttribute="bottom" constant="100" id="GY4-KZ-zld"/>
+                            <constraint firstItem="IhG-FI-Rm6" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="300" id="Jdw-Dn-ve2"/>
+                            <constraint firstItem="Ibp-2Q-wtD" firstAttribute="centerX" secondItem="IhG-FI-Rm6" secondAttribute="centerX" id="Nf3-KB-vdt"/>
+                            <constraint firstItem="Ibp-2Q-wtD" firstAttribute="centerX" secondItem="IDa-9a-Rg3" secondAttribute="centerX" id="OX1-cH-cj3"/>
+                            <constraint firstItem="Ibp-2Q-wtD" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="511" id="bzo-9W-q6L"/>
+                            <constraint firstItem="IhG-FI-Rm6" firstAttribute="top" secondItem="IDa-9a-Rg3" secondAttribute="bottom" constant="68" id="erY-pM-9qS"/>
+                            <constraint firstItem="Ibp-2Q-wtD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="30" id="tSV-3z-xi9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ibp-2Q-wtD" secondAttribute="trailing" constant="30" id="yfy-VB-Gbc"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="L7F-9H-Xqj"/>
+                    <connections>
+                        <outlet property="scrollView" destination="Ibp-2Q-wtD" id="Otz-EF-quY"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1112.8" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zog-V4-mfk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zrm-cW-2he" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="l2q-BS-SXF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="EYr-ho-FKX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TS6-5v-El1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="361" y="27"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
